--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,5 +1,5 @@
-# .github/workflows/dotnet.yml
-name: .NET Build and Analyze
+# .github/workflows/dotnet-framework.yml
+name: Build .NET Framework 4.7.2
 
 on:
   push:
@@ -14,16 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '4.7.2'
-
     - name: Restore NuGet packages
-      run: nuget restore
+      run: nuget restore DineEase.sln
 
     - name: Build solution
       run: msbuild DineEase.sln /p:Configuration=Release
-
-    - name: Run StyleCop Analyzers
-      run: msbuild DineEase.sln /p:RunAnalyzers=true /p:TreatWarningsAsErrors=true
