--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,19 +3,20 @@ name: Build .NET Framework 4.7.2
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Restore NuGet packages
-      run: nuget restore DineEase.sln
+      - name: Restore NuGet packages
+        run: nuget restore DineEase.sln
 
-    - name: Build solution
-      run: msbuild DineEase.sln /p:Configuration=Release
+      - name: Build solution
+        run: |
+          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" DineEase.sln /p:Configuration=Release
