--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -52,6 +52,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddItemPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddItemPage.Designer.cs">
+      <DependentUpon>AddItemPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminHomePage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminHomePage.Designer.cs">
+      <DependentUpon>AdminHomePage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +72,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateItemPagecs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateItemPagecs.Designer.cs">
+      <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AddItemPage.resx">
+      <DependentUpon>AddItemPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminHomePage.resx">
+      <DependentUpon>AdminHomePage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -72,6 +96,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UpdateItemPagecs.resx">
+      <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
