--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -52,12 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-  <Compile Include="Security.cs" />
-  <Compile Include="User.cs" />
-  <Compile Include="Signup.cs" />
-</ItemGroup>
+    <Compile Include="Security.cs" />
+    <Compile Include="User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Signup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
   <ItemGroup>
-  
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
