--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -52,12 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-  <Compile Include="Security.cs" />
-  <Compile Include="User.cs" />
-  <Compile Include="Signup.cs" />
-</ItemGroup>
+    <Compile Include="Security.cs" />
+    <Compile Include="User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Signup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
   <ItemGroup>
-  
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,18 +69,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateItemPagecs.cs">
+    <Compile Include="Security.cs" />
+    <Compile Include="Signup.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UpdateItemPagecs.Designer.cs">
-      <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
+    <Compile Include="Signup.Designer.cs">
+      <DependentUpon>Signup.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddItemPage.resx">
-      <DependentUpon>AddItemPage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AdminHomePage.resx">
-      <DependentUpon>AdminHomePage.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User.Designer.cs">
+      <DependentUpon>User.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,8 +94,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UpdateItemPagecs.resx">
-      <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
+    <EmbeddedResource Include="Signup.resx">
+      <DependentUpon>Signup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="User.resx">
+      <DependentUpon>User.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
