--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addfood.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addfood.Designer.cs">
+      <DependentUpon>addfood.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddItemPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,12 @@
     </Compile>
     <Compile Include="Description.Designer.cs">
       <DependentUpon>Description.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FoodDetailsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FoodDetailsForm.Designer.cs">
+      <DependentUpon>FoodDetailsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -103,12 +115,15 @@
     <Compile Include="User.Designer.cs">
       <DependentUpon>User.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserViewProducts.cs">
+    <Compile Include="UserViewProduct.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UserViewProducts.Designer.cs">
-      <DependentUpon>UserViewProducts.cs</DependentUpon>
+    <Compile Include="UserViewProduct.Designer.cs">
+      <DependentUpon>UserViewProduct.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="addfood.resx">
+      <DependentUpon>addfood.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddItemPage.resx">
       <DependentUpon>AddItemPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Description.resx">
       <DependentUpon>Description.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FoodDetailsForm.resx">
+      <DependentUpon>FoodDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -139,8 +157,8 @@
     <EmbeddedResource Include="UpdateItemPagecs.resx">
       <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserViewProducts.resx">
-      <DependentUpon>UserViewProducts.cs</DependentUpon>
+    <EmbeddedResource Include="UserViewProduct.resx">
+      <DependentUpon>UserViewProduct.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
