updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,23 @@
 *.dll
 bin/
 obj/
+# Visual Studio
+.vs/
+*.suo
+*.user
+*.pdb
+*.obj
+*.o
+*.lib
+*.exp
+*.exe
+*.dll
+*.ilk
+*.idb
+*.mdb
+*.orig
+*.log
+*.bak
+*.cache
+[Bb]in/
+[Oo]bj/
