--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddItem.Designer.cs">
+      <DependentUpon>AddItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddItemPage.cs">
       <SubType>Form</SubType>
     </Compile>
