--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -64,6 +64,12 @@
     <Compile Include="AdminHomePage.Designer.cs">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </Compile>
+    <Compile Include="FoodDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FoodDetails.Designer.cs">
+      <DependentUpon>FoodDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminHomePage.resx">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FoodDetails.resx">
+      <DependentUpon>FoodDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
