--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -58,6 +58,12 @@
     <Compile Include="AddItem.Designer.cs">
       <DependentUpon>AddItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminHome.Designer.cs">
+      <DependentUpon>AdminHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminHomePage.cs">
       <SubType>Form</SubType>
     </Compile>
