--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -64,11 +64,11 @@
     <Compile Include="AdminHomePage.Designer.cs">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </Compile>
-    <Compile Include="FoodDetails.cs">
+    <Compile Include="AdminProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FoodDetails.Designer.cs">
-      <DependentUpon>FoodDetails.cs</DependentUpon>
+    <Compile Include="AdminProfile.Designer.cs">
+      <DependentUpon>AdminProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -85,26 +85,25 @@
     <Compile Include="Signup.Designer.cs">
       <DependentUpon>Signup.cs</DependentUpon>
     </Compile>
-    <Compile Include="UpdateItemPage.cs">
+    <Compile Include="UpdateItemPagecs.cs" />
+    <Compile Include="UpdateItemPagecs.Designer.cs">
+      <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs" />
+    <Compile Include="User.Designer.cs">
+      <DependentUpon>User.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UpdateItemPage.Designer.cs">
-      <DependentUpon>UpdateItemPage.cs</DependentUpon>
-    </Compile>
-    <Compile Include="userViewFood.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="userViewFood.Designer.cs">
-      <DependentUpon>userViewFood.cs</DependentUpon>
+    <Compile Include="UserProfile.Designer.cs">
+      <DependentUpon>UserProfile.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AddItemPage.resx">
       <DependentUpon>AddItemPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminHomePage.resx">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FoodDetails.resx">
-      <DependentUpon>FoodDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -122,11 +121,8 @@
     <EmbeddedResource Include="Signup.resx">
       <DependentUpon>Signup.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UpdateItemPage.resx">
-      <DependentUpon>UpdateItemPage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="userViewFood.resx">
-      <DependentUpon>userViewFood.cs</DependentUpon>
+    <EmbeddedResource Include="UpdateItemPagecs.resx">
+      <DependentUpon>UpdateItemPagecs.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
