--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\icon-park-outline_expand-left.png" />
+    <Content Include="Resources\iconoir_sidebar-collapse.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
