--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -164,140 +164,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\menu.jpeg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu-bar.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\hamburger.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\download.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu-bar1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\download %281%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\begin.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gear.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\settings.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\begin1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu-bar2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu3.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu4.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menus.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\home %281%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\shopping-list.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\shopping-list1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\history.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\settings1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\profile-user.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menus1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\begin2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\hamburger1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gear1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menus2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\home %281%291.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\settings2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-right-button-48.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-home-50.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-order-completed-50.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-history-48.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-setting-50.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-user-profile-24.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-history-481.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon-park-outline_expand-left.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\iconamoon_home-fill.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon-park-outline_history.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\material-symbols_draft-orders.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\material-symbols_draft-orders1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Vector.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gg_profile.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\DineEase.png" />
-    <Content Include="Resources\iconoir_sidebar-collapse.png" />
+    <Content Include="Resources\user_admin_img.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\icon-park-outline_expand-left.png" />
