--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -52,42 +52,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddItemPage.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AddItemPage.cs" />
     <Compile Include="AddItemPage.Designer.cs">
       <DependentUpon>AddItemPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="AdminHomePage.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AdminHomePage.cs" />
     <Compile Include="AdminHomePage.Designer.cs">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </Compile>
-    <Compile Include="FoodDetails.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FoodDetails.cs" />
     <Compile Include="FoodDetails.Designer.cs">
       <DependentUpon>FoodDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Form1.cs" />
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
-    <Compile Include="Signup.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Signup.cs" />
     <Compile Include="Signup.Designer.cs">
       <DependentUpon>Signup.cs</DependentUpon>
     </Compile>
-    <Compile Include="UpdateItemPage.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="UpdateItemPage.cs" />
     <Compile Include="UpdateItemPage.Designer.cs">
       <DependentUpon>UpdateItemPage.cs</DependentUpon>
     </Compile>
