--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -69,10 +69,10 @@
     <Compile Include="view\AdminHomePage.Designer.cs">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </Compile>
-    <Compile Include="AdminViewOrders.cs">
+    <Compile Include="view\AdminViewOrders.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminViewOrders.Designer.cs">
+    <Compile Include="view\AdminViewOrders.Designer.cs">
       <DependentUpon>AdminViewOrders.cs</DependentUpon>
     </Compile>
     <Compile Include="view\FoodDetails.cs" />
@@ -133,7 +133,7 @@
     <EmbeddedResource Include="view\AdminHomePage.resx">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdminViewOrders.resx">
+    <EmbeddedResource Include="view\AdminViewOrders.resx">
       <DependentUpon>AdminViewOrders.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FoodDetails.resx">
