user home page designed

--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -102,6 +102,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="view\navigationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\navigationForm.Designer.cs">
+      <DependentUpon>navigationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\Signup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,12 @@
     </Compile>
     <Compile Include="view\UpdateItemPage.Designer.cs">
       <DependentUpon>UpdateItemPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\UserHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\UserHome.Designer.cs">
+      <DependentUpon>UserHome.cs</DependentUpon>
     </Compile>
     <Compile Include="view\UserProfile.cs">
       <SubType>Form</SubType>
@@ -143,11 +155,17 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\navigationForm.resx">
+      <DependentUpon>navigationForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\Signup.resx">
       <DependentUpon>Signup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\UpdateItemPage.resx">
       <DependentUpon>UpdateItemPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\UserHome.resx">
+      <DependentUpon>UserHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\UserProfile.resx">
       <DependentUpon>UserProfile.cs</DependentUpon>
