--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -70,13 +70,15 @@
     <Compile Include="view\AdminHomePage.Designer.cs">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </Compile>
-    <Compile Include="AdminViewOrders.cs">
+    <Compile Include="view\AdminViewOrders.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminViewOrders.Designer.cs">
+    <Compile Include="view\AdminViewOrders.Designer.cs">
       <DependentUpon>AdminViewOrders.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\FoodDetails.cs" />
+    <Compile Include="view\FoodDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="view\AdminProfile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,9 +87,6 @@
     </Compile>
     <Compile Include="dao\DBConnection.cs" />
     <Compile Include="dao\CurrentUser.cs" />
-    <Compile Include="view\FoodDetails.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="view\FoodDetails.Designer.cs">
       <DependentUpon>FoodDetails.cs</DependentUpon>
     </Compile>
@@ -141,7 +140,7 @@
     <EmbeddedResource Include="view\AdminHomePage.resx">
       <DependentUpon>AdminHomePage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdminViewOrders.resx">
+    <EmbeddedResource Include="view\AdminViewOrders.resx">
       <DependentUpon>AdminViewOrders.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FoodDetails.resx">
