--- a/DineEase/DineEase.csproj
+++ b/DineEase/DineEase.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FoodDetails.cs" />
     <Compile Include="ShowPage.cs" />
     <Compile Include="ShowPageFactory.cs" />
     <Compile Include="view\AddItemPage.cs">
@@ -90,9 +91,6 @@
     </Compile>
     <Compile Include="view\BlurForm.Designer.cs">
       <DependentUpon>BlurForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="view\FoodDetails.cs">
-      <SubType>Form</SubType>
     </Compile>
     <Compile Include="view\FoodDetails.Designer.cs">
       <DependentUpon>FoodDetails.cs</DependentUpon>
